rest module end to end implementation